# agentgate

./: .gitignore  README.md  pyproject.toml
agentgate/: __init__.py
agentgate/client/: client.py  discovery.py  executor.py  site.py
agentgate/server/: app.py  decorators.py  manifest.py  middleware.py  router.py  session.py
agentgate/shared/: errors.py  manifest.py  protocol.py
examples/: agent_client.py  foodpanda_server.py
tests/: test_manifest.py  test_server_integration.py  test_session.py
